# learning-ml-models

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md  copilot.yaml
benchmarks/: benchmark_cosine_similarity.py  benchmark_knn_regressor.py  benchmark_linear_regression.py  benchmark_polynomial_regression.py  benchmark_silhouette_score.py  benchmark_tfidf.py  example_roc_auc.py
learning_modules/01-explore-analyze-data/: Exercise_Experiment_with_more_powerful_regression_models.ipynb  Exercise_Optimize_and_save_models.ipynb  Exercise_Train_and_evaluate_a_regression_model.ipynb  Exercise_Visualize_data_with_Matplotlib.ipynb  Explore_and_analyze_data_with_Python.ipynb  Explore_data_distributions_and_comparisons.ipynb  README.md
learning_modules/02-train-evaluate-regression/: Exercise_Perform_classification_with_alternative_metrics.ipynb  Exercise_Train_and_evaluate_a_classification_model.ipynb  Experiment_with_regression_models.ipynb  README.md  (+4 more)
scripts/: repair_notebooks.py  setup.sh  smoke_test_pytorch.py
src/: quick-reference.md
tests/: test_bias_variance_polynomial.py  test_cosine_similarity.py  test_custom_rsf.py  test_decision_tree.py  test_f1_score.py  test_heart_classification.py  test_hypothesis_testing.py  test_kmeans.py  test_knn_regressor.py  test_lasso_regression.py  test_linear_regression.py  test_logistic_guesstimate.py  test_model_comparison.py  test_model_selection_polynomial.py  test_model_selection_polynomial_cv.py  test_mse.py  test_multi_linear_regression.py  test_multi_poly_land_classifier.py  test_polynomial_regression.py  test_random_universe_beta.py  test_regression_tree.py  test_regularization_comparison.py  test_rfm.py  test_ridge_regression.py  test_roc_auc.py  test_silhouette_score.py  test_tfidf.py  test_tree_pruning_and_cv.py
(+92 files in other folders)
