# Pyproject.toml for matrix-viz package
# Ref.:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://realpython.com/python-toml/
#
[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-ml-models"
version = "0.1.0"
description = "Learning machine learning models with educational implementations and scikit-learn comparisons"
authors = [
    { name = "Akai Kaede", email = "it.scope@gmail.com" }
]
requires-python = ">=3.11"
# Pinned runtime dependencies - Updated for Python 3.14 compatibility
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "lifelines>=0.27.0,<1.0.0",
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
# Developer / test tools - Updated for Python 3.14 compatibility
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "black>=24.0.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.0.0,<5.0.0",
]
# Jupyter / notebooks - Updated for Python 3.14 compatibility
notebook = [
    "jupyterlab>=4.0.0,<5.0.0",
    "ipywidgets>=8.0.0,<9.0.0",
    "ipykernel>=7.1.0,<9.0.0",
    "torch>=2.2.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "torchaudio>=2.2.0,<3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["machine_learning*"]
